2004-06-27  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-i386/system.h: Better split the SMP/UP code
	so that the #ifdef hell is reduced.

2004-06-26  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/heap.c: Remove the automatically extendable heap
	feature: this proved to be useless and confusing. Provide
	xnheap_extend() to manually extend any given heap instead.
	Fix documentation and skins accordingly.

2004-06-25  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_schedule_runnable): Fix XNSCHED handling,
	so that we still leave this bit on if no thread switch is
	performed.
	(xnpod_schedule): Optimize and iron SMP case.

2004-06-24  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* arch/i386/Kconfig, arch/i386/defconfig, configure.in: correctly
	handle the configure-time number of cpus.

2004-06-23  Philippe Gerum  <rpm@xenomai.org>

	* configure.in: Do not pass SUBDIRS to the kernel builder anymore;
	only rely on M=.

	* include/nucleus/asm-i386/system.h (xnarch_thread_redirect): 
	Force regparm(0) so that we are still safe if CONFIG_REGPARM is
	enabled (use "asmlinkage" for that).

2004-06-21  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/hal/hal.c (rthal_domain_entry): Disable sync (debug)
	mode for printk().

	* nucleus/lib/fusion.c (pthread_migrate_rt): Directly use the
	nucleus-based migration service: this one works properly in all
	cases...

2004-06-21  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* configure.in, GNUmakefile.am: handle correctly the "all" and "dist"
	targets, whether or not the doc and sim directories are present in
	the source tree.

2004-06-20  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai: Export interface symbols.

2004-06-19  Philippe Gerum  <rpm@xenomai.org>

	* doc/docbook/docbook-test/xenomai.xml: Refactor the paper
	according to the latest RTAI/Xenomai evolution.

2004-06-18  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.1
